# GTK-Serial-Test

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/abserio/: CMakeLists.txt  abserio.h  const.c  posix_alloc.c  win_alloc.c
src/: CMakeLists.txt  config.h  main.c
